--- a/Day-8-LocalStorage/index.html
+++ b/Day-8-LocalStorage/index.html
@@ -10,18 +10,20 @@
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-        <style>
-            body{
-                background-color: palevioletred;
-            }
-        </style>
+    <style>
+        body {
+            background-image: url('./bg.jpg');
+            height: 100vh;
+            background-size: cover;
+        }
+    </style>
 </head>
 
 <body>
     <section class="container">
         <div class="row justify-content-center">
             <div class="col-md-6">
-                <form id="form">
+                <form id="form" class="bg-light p-4 rounded-5 mt-3">
                     <div class="mb-3">
                         <label for="key" class="form-label">Product Name</label>
                         <input type="text" class="form-control" name="pname">
@@ -33,6 +35,10 @@
                     <div class="mb-3">
                         <label for="key" class="form-label">Product Quantity</label>
                         <input type="text" class="form-control" name="qty">
+                    </div>
+                    <div class="mb-3">
+                        <label for="key" class="form-label">Product Code</label>
+                        <input type="text" class="form-control" name="p_code">
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
@@ -46,9 +52,10 @@
                         <th>Name</th>
                         <th>Price</th>
                         <th>Qty</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
-                <tbody class=""></tbody>
+                <tbody class="text-center"></tbody>
             </table>
         </div>
     </section>
@@ -67,11 +74,12 @@
         let eachData = document.querySelectorAll('#form input');
         let list = JSON.parse(localStorage.getItem('list')) || [];
         let items = {};
+        let editId = null;
         eachData.forEach((input) => {
             input.addEventListener('input', (e) => {
                 // console.log(e);
                 let { name, value } = e.target;
-                items = { ...items, [name]:value };
+                items = { ...items, [name]: value };
             });
             //    console.log(items);
 
@@ -80,9 +88,15 @@
 
         form.addEventListener('submit', (event) => {
             event.preventDefault();
-            list.push({...items , id:Date.now()});
-            localStorage.setItem('list' , JSON.stringify(list));    
+            if (editId === null) {
+                list.push({ ...items, id: Date.now() });
+            }
+            else {
+                editId = null;
+            }
+            localStorage.setItem('list', JSON.stringify(list));
             renderTable();
+            form.reset();
         });
         function renderTable() {
             table.innerHTML = "";
@@ -93,11 +107,32 @@
                 <td>${list[i].pname}</td>
                 <td>${list[i].price}</td>
                 <td>${list[i].qty}</td>
+                <td><button class="btn btn-danger" onclick="handleDelete(${i})">Delete</button>
+                <button class="btn btn-info" onclick="handleEdit(${i})">Edit</button></td>
             </tr>
         `;
             });
         }
-        renderTable();
+
+        function handleDelete(index) {
+            list.splice(index, 1);
+            localStorage.setItem('list', JSON.stringify(list));
+            renderTable();
+        }
+        function handleEdit(index) {
+            let item = list[index];
+            eachData.forEach((input) => {
+                input.value = item[input.name];
+                input.addEventListener('input', (e) => {
+                    let { name, value } = e.target;
+                    items = { ...items, [name]: value };
+                    list[index] = { ...list[index], ...items };
+                    editId = index;
+                    localStorage.setItem('list', JSON.stringify(list));
+                });
+            });
+            renderTable();
+        }
     </script>
 </body>
 
